用redis幂等操作防止多次注册

--- a/huo/src/main/resources/templates/register.html
+++ b/huo/src/main/resources/templates/register.html
@@ -133,9 +133,8 @@
                     layer.msg(data.result);
                 }else{
                     layer.msg(data.result,function () {
-                        window.location.href="/keying";
+                        window.location.href="/";
                     });
-
                 }
             }
         })
